[gd_scene load_steps=3 format=3 uid="uid://cheeuax7hbogi"]

[ext_resource type="Script" uid="uid://c1wv43bwhxa5c" path="res://scripts/node_2d.gd" id="1_nx28p"]
[ext_resource type="Texture2D" uid="uid://b6t0lgv85l685" path="res://sprites/cone.png" id="2_0g65o"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nx28p")

[node name="Label" type="Label" parent="."]
offset_left = 419.0
offset_top = 219.0
offset_right = 914.0
offset_bottom = 557.0
theme_override_font_sizes/font_size = 100
text = "Hi SE1"

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
visibility_layer = 1023
z_index = 1
offset_left = 455.0
offset_top = 412.0
offset_right = 685.0
offset_bottom = 570.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(567, 511)
scale = Vector2(0.660145, 0.201237)
texture = ExtResource("2_0g65o")

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
visible = false
z_index = -9
offset_left = -135.0
offset_top = -416.0
offset_right = 1058.0
offset_bottom = 262.0
color = Color(0, 0, 0, 1)

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 105.0
offset_bottom = 92.0

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 1044.0
offset_top = 2.0
offset_right = 1149.0
offset_bottom = 94.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
